# monolit_lab_6

./: .gitignore  README.md  README_OPENROUTER.md  main.py  pyproject.toml  requirements.txt
files/1/: PYTHON - ЯЗЫК ПРОГРАММИРОВАНИЯ_annotation.txt  PYTHON - ЯЗЫК ПРОГРАММИРОВАНИЯ_article.txt  PYTHON - ЯЗЫК ПРОГРАММИРОВАНИЯ_summary.txt  PYTHON - ЯЗЫК ПРОГРАММИРОВАНИЯ_анализ.txt  PYTHON - ЯЗЫК ПРОГРАММИРОВАНИЯ_аннотация.txt  PYTHON - ЯЗЫК ПРОГРАММИРОВАНИЯ_пересказ.txt
files/2/: Автоматическое дифференцирование в Python_анализ.txt  Автоматическое дифференцирование в Python_аннотация.txt  Автоматическое дифференцирование в Python_пересказ.txt
files/3/: LIST METHODS IN PYTHON_анализ.txt  LIST METHODS IN PYTHON_аннотация.txt  LIST METHODS IN PYTHON_пересказ.txt
files/4/: DATA VISUALIZATION IN PYTHON_анализ.txt  DATA VISUALIZATION IN PYTHON_аннотация.txt  DATA VISUALIZATION IN PYTHON_пересказ.txt  КОНСТИТУЦИЯ НА РЕМОНТЕ_annotation.txt  КОНСТИТУЦИЯ НА РЕМОНТЕ_article.txt  КОНСТИТУЦИЯ НА РЕМОНТЕ_summary.txt
files/5/: РЕМОНТ ТРАССЫ М-4_annotation.txt  РЕМОНТ ТРАССЫ М-4_article.txt  РЕМОНТ ТРАССЫ М-4_summary.txt
modules/: config.py  openrouter_client.py  parser.py  parser_test.py  pdf_processor.py
schemas/: schemas.py
static/scripts/: main.js
static/styles/: styles.css
static/templates/: index.html
