[project]
name = "monolit-lab-6"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi[standard]>=0.121.2",
    "lxml>=6.0.2",
    "pydantic-settings>=2.12.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
